# src/app/api/model/duplicate-event-created.ts
@@ -1,0 +1,16 @@
+/**
+ * Training Manager API
+ *
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+export interface DuplicateEventCreated { 
+    id: number;
+    date: string;
+}
+
