# src/app/api/model/duplicate-event-response.ts
@@ -1,0 +1,16 @@
+/**
+ * Training Manager API
+ *
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+import { DuplicateEventCreated } from './duplicate-event-created';
+
+
+export interface DuplicateEventResponse { 
+    created: Array<DuplicateEventCreated>;
+}
+
