# src/app/api/model/models.ts
@@ -19,6 +19,9 @@ export * from './complete-invitation-response';
 export * from './create-invitation';
 export * from './create-join-request';
 export * from './custom-user-public';
+export * from './duplicate-event-created';
+export * from './duplicate-event-request';
+export * from './duplicate-event-response';
 export * from './email-confirm';
 export * from './email-resend';
 export * from './endpoint-enum';
